--- a/templates/references.html
+++ b/templates/references.html
@@ -15,6 +15,7 @@
                     <li><a href="{{ url_for('home')}}"> HOME</a></li>
                     <li><a href="{{ url_for('face2voice')}}"> TRY FACE2VOICE</a></li>
                     <li><a href="{{ url_for('references')}}"> REFERENCES</a></li>
+                    <li><a href="https://github.com/jh5-6/Face2Voice"> GITHUB</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,14 +29,9 @@
                 <div id="paper_container">
                     <h2>Paper</h2>
                     <ol> 
-                        <li><a href = "https://arxiv.org/pdf/1806.04558.pdf">SV2TTS </a> </li>
-                        <p id="mark"> Ye Jia 外 11(2019)「Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis」</p>
-    
-                        <li> <a href = "https://arxiv.org/pdf/2206.14009.pdf"> Lip2Speech</a> </li>
-                        <p id="mark"> Christen Millerdurai 外 2(2022)「Show Me Your Face, And I’ll Tell You How You Speak」</p>
-                 
-                        <li> <a href = "https://arxiv.org/pdf/1905.09773.pdf"> Speech2Face </a> </li>
-                        <p id = "mark"> Tae-Hyun Oh 外 6(2019)「Speech2Face: Learning the Face Behind a Voice」</p>                
+                        <li><a href = "https://arxiv.org/pdf/1806.04558.pdf">Ye Jia 外 11(2019)「Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis」</a> </li><br>
+                        <li> <a href = "https://arxiv.org/pdf/2206.14009.pdf"> Christen Millerdurai 外 2(2022)「Show Me Your Face, And I’ll Tell You How You Speak」</a> </li><br>
+                        <li> <a href = "https://arxiv.org/pdf/1905.09773.pdf"> Tae-Hyun Oh 外 6(2019)「Speech2Face: Learning the Face Behind a Voice」 </a> </li>               
                     </ol> 
                 </div>
 
