--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
                     <li><a href="{{ url_for('home')}}"> HOME</a></li>
                     <li><a href="{{ url_for('face2voice')}}"> TRY FACE2VOICE</a></li>
                     <li><a href="{{ url_for('references')}}"> REFERENCES</a></li>
+                    <li><a href="https://github.com/jh5-6/Face2Voice"> GITHUB</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,92 +26,115 @@
 
         <div class="container">
             <div id="sub_container">
-                <div id="home_visual_container">  
-                    <table>
-                        <tr>
-                            <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
-                            <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
-                            <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
-                            <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div>
-                                    <h5>original audio</h5>
-                                    <audio controls="controls">
-                                        <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
-                                    </audio>       
-                                </div>
-                            </td>
-                            <td>
-                                <div>
-                                    <h5>original audio</h5>
-                                    <audio controls="controls">
-                                        <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
-                                    </audio>       
-                                </div>
-                            </td>
-                            <td>
-                                <div>
-                                    <h5>original audio</h5>
-                                    <audio controls="controls">
-                                        <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
-                                    </audio>       
-                                </div>
-                            </td>
-                            <td>
-                                <div>
-                                    <h5>original audio</h5>
-                                    <audio controls="controls">
-                                        <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
-                                    </audio>       
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td> 
-                                <div>
-                                    <h5>Predicted audio</h5>
-                                    <audio controls="controls">
-                                        <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
-                                    </audio>
-                                </div>
-                            </td>
-                            <td> 
-                                <div>
-                                    <h5>Predicted audio</h5>
-                                    <audio controls="controls">
-                                        <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
-                                    </audio>
-                                </div>
-                            </td>
-                            <td> 
-                                <div>
-                                    <h5>Predicted audio</h5>
-                                    <audio controls="controls">
-                                        <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
-                                    </audio>
-                                </div>
-                            </td>
-                            <td> 
-                                <div>
-                                    <h5>Predicted audio</h5>
-                                    <audio controls="controls">
-                                        <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
-                                    </audio>
-                                </div>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
+                <table>
+                    <tr>
+                        <td colspan="4">
+                            <p>Input text</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="4">
+                            <h5> " Put the face image you want to convert to voice and listen to the voice in the text you want. "</h5>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="4">
+                            <p>Input face image </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
+                        <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
+                        <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
+                        <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
+                    </tr>
+
+                    <tr id="row_padding">
+                        <td colspan="4">
+                            <p>Voice synthesized from face</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> 
+                            <div>     
+                                <audio controls="controls">
+                                    <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
+                                </audio>
+                            </div>
+                        </td>
+                        <td> 
+                            <div>
+                                <audio controls="controls">
+                                    <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
+                                </audio>
+                            </div>
+                        </td>
+                        <td> 
+                            <div>
+                                <audio controls="controls">
+                                    <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
+                                </audio>
+                            </div>
+                        </td>
+                        <td> 
+                            <div>
+                                <audio controls="controls">
+                                    <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
+                                </audio>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table>
+                    <tr  id="row_padding">
+                        <td colspan="4">
+                            <p>Original voice</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div>
+                                <audio controls="controls">
+                                    <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
+                                </audio>       
+                            </div>
+                        </td>
+                        <td>
+                            <div>
+                                <audio controls="controls">
+                                    <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
+                                </audio>       
+                            </div>
+                        </td>
+                        <td>
+                            <div>
+                                <audio controls="controls">
+                                    <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
+                                </audio>       
+                            </div>
+                        </td>
+                        <td>
+                            <div>
+                                <audio controls="controls">
+                                    <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
+                                </audio>       
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                               
+                <hr id="line"/>
+
                 <div id="home_text_container">
-                    <div id="text_kor">
+                    <!-- <div id="text_kor">
                         Face2Speech는 얼굴을 입력으로 받아 그에 해당하는 얼굴을 출력하는 프로그램입니다. <br>
                         음성으로 변환을 원하는 얼굴 이미지를 넣어 원하는 텍스트로 음성을 들어보세요.
-                    </div>
+                    </div> -->
+                    <!--  Face2spech is a program that receives a face as an input and outputs a corresponding face.  -->
                     <div id="text_en">
-                        Face2spech is a program that receives a face as an input and outputs a corresponding face. <br>
+                        Face2Voice uses face images and text as inputs (actual voices are shown for reference only). Our goal is not to synthesize an exact human voice, but to synthesize a voice with features that correlate with the input face image.
                         Put the face image you want to convert to voice and listen to the voice in the text you want.
                     </div>
                 </div>
