--- a/templates/home.html
+++ b/templates/home.html
@@ -135,7 +135,7 @@
                     <!--  Face2spech is a program that receives a face as an input and outputs a corresponding face.  -->
                     <div id="text_en">
                         Face2Voice uses face images and text as inputs (actual voices are shown for reference only). Our goal is not to synthesize an exact human voice, but to synthesize a voice with features that correlate with the input face image.
-                        Put the face image you want to convert to voice and listen to the voice in the text you want.
+                        <br> Put the face image you want to convert to voice and listen to the voice in the text you want.
                     </div>
                 </div>
             </div>
