[ADD] cite the source of an image

--- a/templates/references.html
+++ b/templates/references.html
@@ -41,8 +41,14 @@
                         <li> <a href = "https://github.com/CorentinJ/Real-Time-Voice-Cloning">SV2TTS </a> </li><br>
                         <li> <a href = "https://github.com/Chris10M/Lip2Speech"> Lip2Speech</a> </li><br>
                         <li> <a href = "https://github.com/saiteja-talluri/Speech2Face"> Speech2Face </a> </li>
-
                     </ol> 
+                </div>
+
+                <div>
+                    <h3>Free license image</h3>
+                    <ol>
+                        <li><a href="https://www.flaticon.com/free-icons/caution" title="caution icons">Caution icons created by Tempo_doloe - Flaticon</a></li>
+                    </ol>
                 </div>
             </div>
         </div>
