--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
         <title>Face2Voice</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
     </head>
 
     <body>    
@@ -23,121 +26,108 @@
         <div class="header">
             <h1>Face2Voice</h1>
         </div>
-
+      
         <div class="container">
             <div id="sub_container">
-                <table>
-                    <tr>
-                        <td colspan="4">
-                            <p>Input text</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="4">
-                            <h5> " Put the face image you want to convert to voice and listen to the voice in the text you want. "</h5>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td colspan="4">
-                            <p>Input face image </p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
-                        <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
-                        <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
-                        <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
-                    </tr>
-
-                    <tr id="row_padding">
-                        <td colspan="4">
-                            <p>Voice synthesized from face</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> 
-                            <div>     
-                                <audio controls="controls">
-                                    <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
-                                </audio>
-                            </div>
-                        </td>
-                        <td> 
-                            <div>
-                                <audio controls="controls">
-                                    <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
-                                </audio>
-                            </div>
-                        </td>
-                        <td> 
-                            <div>
-                                <audio controls="controls">
-                                    <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
-                                </audio>
-                            </div>
-                        </td>
-                        <td> 
-                            <div>
-                                <audio controls="controls">
-                                    <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
-                                </audio>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-
-                <table>
-                    <tr  id="row_padding">
-                        <td colspan="4">
-                            <p>Original voice</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div>
-                                <audio controls="controls">
-                                    <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
-                                </audio>       
-                            </div>
-                        </td>
-                        <td>
-                            <div>
-                                <audio controls="controls">
-                                    <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
-                                </audio>       
-                            </div>
-                        </td>
-                        <td>
-                            <div>
-                                <audio controls="controls">
-                                    <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
-                                </audio>       
-                            </div>
-                        </td>
-                        <td>
-                            <div>
-                                <audio controls="controls">
-                                    <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
-                                </audio>       
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-                               
+                <div id="home_text_container">
+                    <div id="text_en">
+                        Face2Voice uses face images and text as inputs (actual voices are shown for reference only). <br>
+                        Our goal is not to synthesize an exact human voice, but to synthesize a voice with features that correlate with the input face image.<br>
+                        Put the face image you want to convert to voice and listen to the voice in the text you want.
+                    </div> 
+                </div>
+                <div id="btn_input">
+                    <div id="btn">
+                        <button id="btn_again" type="button" onclick=window.location.href="{{ url_for('face2voice')}}">TRY FACE2VOICE</button>
+                    </div>  
+                </div>  
                 <hr id="line"/>
 
-                <div id="home_text_container">
-                    <!-- <div id="text_kor">
-                        Face2Speech는 얼굴을 입력으로 받아 그에 해당하는 얼굴을 출력하는 프로그램입니다. <br>
-                        음성으로 변환을 원하는 얼굴 이미지를 넣어 원하는 텍스트로 음성을 들어보세요.
-                    </div> -->
-                    <!--  Face2spech is a program that receives a face as an input and outputs a corresponding face.  -->
-                    <div id="text_en">
-                        Face2Voice uses face images and text as inputs (actual voices are shown for reference only). Our goal is not to synthesize an exact human voice, but to synthesize a voice with features that correlate with the input face image.
-                        <br> Put the face image you want to convert to voice and listen to the voice in the text you want.
-                    </div>
-                </div>
+                <div id="example_container">
+                    <h3> Face2Voice Examples </h3>
+                    <table>
+                        <tr>
+                            <td><p>Input text</p></td>
+                            <td colspan="4">
+                                <h5> " Put the face image you want to convert to voice and listen to the voice in the text you want. "</h5>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><p>Input image </p></td>
+                            <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
+                            <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
+                            <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
+                            <td><img src="{{ url_for('static', filename='images/home_image/example.jpg') }}"></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p>Synthesized voice</p>
+                            </td>
+                            <td> 
+                                <div>     
+                                    <audio controls="controls">
+                                        <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
+                                    </audio>
+                                </div>
+                            </td>
+                            <td> 
+                                <div>
+                                    <audio controls="controls">
+                                        <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
+                                    </audio>
+                                </div>
+                            </td>
+                            <td> 
+                                <div>
+                                    <audio controls="controls">
+                                        <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
+                                    </audio>
+                                </div>
+                            </td>
+                            <td> 
+                                <div>
+                                    <audio controls="controls">
+                                        <source src="{{ url_for('static', filename='audio/home_audio/gen_example.wav') }}" type="audio/wav" />
+                                    </audio>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <table>
+                        <tr>
+                            <td><p>Original voice</p></td>
+                            <td>
+                                <div>
+                                    <audio controls="controls">
+                                        <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
+                                    </audio>       
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <audio controls="controls">
+                                        <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
+                                    </audio>       
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <audio controls="controls">
+                                        <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
+                                    </audio>       
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <audio controls="controls">
+                                        <source src="{{ url_for('static', filename='audio/home_audio/example.mp3') }}" type="audio/mp3"/>
+                                    </audio>       
+                                </div>
+                            </td>
+                        </tr>
+                    </table>    
+                </div>                  
             </div>
         </div>
     </body>
