--- a/templates/references.html
+++ b/templates/references.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
         <title>Face2Voice</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
     </head>
 
     <body>     
@@ -41,8 +44,14 @@
                         <li> <a href = "https://github.com/CorentinJ/Real-Time-Voice-Cloning">SV2TTS </a> </li><br>
                         <li> <a href = "https://github.com/Chris10M/Lip2Speech"> Lip2Speech</a> </li><br>
                         <li> <a href = "https://github.com/saiteja-talluri/Speech2Face"> Speech2Face </a> </li>
-
                     </ol> 
+                </div>
+
+                <div id="license_container">
+                    <h3>Free license image</h3>
+                    <ol>
+                        <li><a href="https://www.flaticon.com/free-icons/caution" title="caution icons">Caution icons created by Tempo_doloe - Flaticon</a></li>
+                    </ol>
                 </div>
             </div>
         </div>
